package com.mgriffin.command;

public interface Command {
    void execute ();
}
